--- a/programs/spinx/Cargo.toml
+++ b/programs/spinx/Cargo.toml
@@ -1,19 +1,29 @@
 [package]
-name = "spinx"
+name = "spinx-contract"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "spinx"
+name = "spinx_contract"
 
 [features]
+default = []
+cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-cpi = ["no-entrypoint"]
-default = []
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+anchor-debug = []
+custom-heap = []
+custom-panic = []
+
 
 [dependencies]
-anchor-lang = "0.29.0"
+anchor-lang = "0.31.1"
+anchor-spl = "0.31.1"
+
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
