--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
+  "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "test": "anchor test"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.29.0",
-    "@solana/web3.js": "1.78.4",
-    "assert": "*",
-    "bn.js": "*"
+    "@coral-xyz/anchor": "^0.31.1",
+    "@solana/spl-token": "^0.4.14",
+    "@solana/web3.js": "^1.98.4",
+    "assert": "^2.1.0",
+    "bn.js": "^5.2.2"
   },
   "devDependencies": {
-    "@types/bn.js": "^5.1.1",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "chai": "^4.3.8",
-    "mocha": "^10.2.0",
-    "prettier": "^3.0.2",
+    "@types/bn.js": "^5.1.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
+    "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.3"
   }
 }
