--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
+    "@orao-network/solana-vrf": "^0.7.0",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.98.4",
     "assert": "^2.1.0",
     "bn.js": "^5.2.2",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
