--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@solana/web3.js": "^1.98.4",
     "assert": "^2.1.0",
     "bn.js": "^5.2.2",
-    "dotenv": "^17.2.2",
-    "tweetnacl": "^1.0.3"
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
