--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,12 +8,15 @@ skip-lint = false
 [programs.devnet]
 spinx_contract = "6W1JspEray9RAnC7oVFa6fHwcSdt9XkWyd7MShFkvGKw"
 
+[programs.mainnet]
+spinx_contract = "6W1JspEray9RAnC7oVFa6fHwcSdt9XkWyd7MShFkvGKw"
+
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
-wallet = "~/.config/solana/id.json"
+cluster = "mainnet"
+wallet = "~/.config/solana/spinx_id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
